aws-lbc/lbc-3/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: lbc-3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
